--- a/CMserver/src/main/resources/cm.properties
+++ b/CMserver/src/main/resources/cm.properties
@@ -1,6 +1,6 @@
 ftp.server.ip = 127.0.0.1
 ftp.user = LCF
 ftp.pass = LCF
-ftp.server.http.prefix = E:\\ftpfile\\
+ftp.server.http.prefix = http://192.168.88.157/img/
 
 alipay.callback.url = http://www.ec.com/order/alipay_callback.do
